# face_recog

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/test/opencvdemo3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: litepal.xml
app/src/main/cpp/: com_android_opencvdemo3_activity_DetectActivity.cpp  com_android_opencvdemo3_activity_DetectActivity.h  com_test_opencvdemo3_JniActivity.cpp  com_test_opencvdemo3_JniActivity.h
app/src/main/java/com/android/opencvdemo3/activity/: BaseActivity.java  BeginActivity.java  DetectActivity.java  HelloActivity.java  RegisterActivity.java
app/src/main/java/com/android/opencvdemo3/db/: Person.java
app/src/main/java/com/android/opencvdemo3/face/: faceRecognize.java  faceRegister.java
app/src/main/java/com/android/opencvdemo3/result/: RecognizeFail.java  RecognizeSuccess.java  RegisterSuccess.java
app/src/main/java/com/android/opencvdemo3/service/: AuthService.java
app/src/main/java/com/android/opencvdemo3/util/: AuthService.java  Base64Util.java  FileUtil.java  GsonUtils.java  HttpUtil.java
app/src/main/java/com/test/opencvdemo3/: JavaActivity.java  JniActivity.java
app/src/main/res/layout/: activity_jni.xml  begin_layout.xml  detect_layout.xml  hello_layout.xml  recognize_fail.xml  recognize_success.xml  register_layout.xml  register_success.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/test/opencvdemo3/: ExampleUnitTest.java
